--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,6 @@
     </head>
     <body>
         <h1>hello GIT world!!!</h1>
-        <h1>diff 명령어 확인</h1>
-        <h1>diff 내용을 커밋에 추가</h1>
+        <h1>Push 테스트</h1>
     </body>
 </html>
